--- a/index.html
+++ b/index.html
@@ -4,17 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Manisha's Portfolio</title>
-    <link rel="stylesheet" href="style.css">
     <style>
-        
+        /* General Reset */
         * {
             margin: 0;
             padding: 0;
             box-sizing: border-box;
-            font-family: Arial, sans-serif;
+            font-family: 'Poppins', sans-serif;
         }
         body {
-            background-color: #f4f4f9;
+            background: linear-gradient(to bottom, #f9f9fb, #f4f4f9);
             color: #333;
             line-height: 1.6;
         }
@@ -22,62 +21,122 @@
             text-decoration: none;
             color: #0056b3;
         }
+        a:hover {
+            color: #003d8f;
+        }
+
+        /* Header */
         header {
-            background-color: #6c63ff;
+            background: linear-gradient(90deg, #6c63ff, #5a56e0);
             color: #fff;
-            padding: 1.5rem;
+            padding: 2rem 1rem;
             text-align: center;
         }
         header h1 {
+            font-size: 2.8rem;
             margin-bottom: 0.5rem;
-            font-size: 2.5rem;
         }
         header p {
             font-size: 1.2rem;
+            margin-top: 0.5rem;
         }
+        header p a {
+            color: #ffe4e4;
+            font-weight: bold;
+        }
+
+        /* Container */
         .container {
             max-width: 1100px;
             margin: 2rem auto;
-            padding: 1rem;
+            padding: 1.5rem;
             background: #fff;
             border-radius: 8px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
         }
+
         h2 {
             color: #6c63ff;
-            border-bottom: 2px solid #6c63ff;
+            border-bottom: 3px solid #6c63ff;
             padding-bottom: 0.5rem;
-            margin-bottom: 1rem;
+            margin-bottom: 1.5rem;
+            font-size: 1.8rem;
         }
-        ul {
-            margin-left: 1rem;
-        }
+
         .section {
             margin-bottom: 2rem;
         }
+
+        ul {
+            list-style-type: disc;
+            margin-left: 1.5rem;
+        }
+
         .skills span, .projects span {
             display: inline-block;
             background: #6c63ff;
             color: #fff;
-            padding: 0.3rem 0.8rem;
-            margin: 0.2rem;
+            padding: 0.4rem 0.8rem;
+            margin: 0.3rem;
             border-radius: 5px;
             font-size: 0.9rem;
         }
+
         .projects a {
             display: inline-block;
-            margin-top: 0.5rem;
+            margin-top: 0.8rem;
             color: #fff;
             background-color: #6c63ff;
-            padding: 0.4rem 0.8rem;
+            padding: 0.5rem 1rem;
             border-radius: 5px;
+            font-size: 0.9rem;
+            font-weight: bold;
+            transition: all 0.3s ease;
         }
+
+        .projects a:hover {
+            background-color: #5a56e0;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+        }
+
         footer {
             text-align: center;
             padding: 1rem;
             background: #333;
             color: #fff;
             margin-top: 2rem;
+            font-size: 0.9rem;
+        }
+
+        /* Responsive Design */
+        @media (max-width: 768px) {
+            header h1 {
+                font-size: 2rem;
+            }
+            header p {
+                font-size: 1rem;
+            }
+            .container {
+                padding: 1rem;
+            }
+            h2 {
+                font-size: 1.5rem;
+            }
+        }
+
+        @media (max-width: 480px) {
+            header h1 {
+                font-size: 1.8rem;
+            }
+            header p {
+                font-size: 0.9rem;
+            }
+            h2 {
+                font-size: 1.3rem;
+            }
+            .skills span, .projects span {
+                font-size: 0.8rem;
+            }
         }
     </style>
 </head>
@@ -86,10 +145,10 @@
         <h1>Manisha Singh</h1>
         <p>Passionate Developer | Full-Stack Java Developer</p>
         <p>
-            📧 <a href="mailto:lovelysingh49178@gmail.com" style="color:#fff;">lovelysingh49178@gmail.com</a> |
+            📧 <a href="mailto:lovelysingh49178@gmail.com">lovelysingh49178@gmail.com</a> |
             📞 +91 8178787012 |
-            <a href="https://github.com/Manisha061099" style="color:#fff;">GitHub</a> |
-            <a href="https://linkedin.com/in/manisha-singh-babb662a6" style="color:#fff;">LinkedIn</a>
+            <a href="https://github.com/Manisha061099">GitHub</a> |
+            <a href="https://linkedin.com/in/manisha-singh-babb662a6">LinkedIn</a>
         </p>
     </header>
 
@@ -115,7 +174,7 @@
                 <span>Hibernate</span>
                 <span>JavaScript</span>
                 <span>Python</span>
-                    <span>MySQL</span>
+                <span>MySQL</span>
                 <span>Docker</span>
                 <span>Git</span>
             </div>
@@ -163,8 +222,9 @@
                 <li>Hindi</li>
             </ul>
         </div>
-         <!-- Soft Skills -->
-         <div class="section">
+        
+        <!-- Soft Skills -->
+        <div class="section">
             <h2>Soft Skills</h2>
             <ul>
                 <li>Good Listener</li>
@@ -174,8 +234,6 @@
                 <li>Adaptability</li>
             </ul>
         </div>
-    </div>
-
     </div>
 
     <footer>
