--- a/index.html
+++ b/index.html
@@ -13,27 +13,31 @@
             font-family: 'Poppins', sans-serif;
         }
         body {
-            background: linear-gradient(to bottom, #f9f9fb, #f4f4f9);
+            background: linear-gradient(to right, #ece9e6, #ffffff);
             color: #333;
             line-height: 1.6;
+            overflow-x: hidden;
         }
+
         a {
             text-decoration: none;
-            color: #0056b3;
+            color: #6c63ff;
         }
+
         a:hover {
-            color: #003d8f;
+            color: #4bfff6;
         }
 
         /* Header */
         header {
-            background: linear-gradient(90deg, #6c63ff, #5a56e0);
+            background: linear-gradient(135deg, #6c63ff, #5a56e0);
             color: #fff;
-            padding: 2rem 1rem;
+            padding: 2.5rem 1rem;
             text-align: center;
+            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
         }
         header h1 {
-            font-size: 2.8rem;
+            font-size: 3rem;
             margin-bottom: 0.5rem;
         }
         header p {
@@ -41,26 +45,28 @@
             margin-top: 0.5rem;
         }
         header p a {
-            color: #ffe4e4;
+            color: #e4e4ff;
             font-weight: bold;
+            transition: color 0.3s ease;
         }
 
         /* Container */
         .container {
             max-width: 1100px;
             margin: 2rem auto;
-            padding: 1.5rem;
+            padding: 2rem;
             background: #fff;
-            border-radius: 8px;
-            box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
+            border-radius: 15px;
+            box-shadow: 0 8px 25px rgba(0, 0, 0, 0.1);
         }
 
         h2 {
             color: #6c63ff;
-            border-bottom: 3px solid #6c63ff;
-            padding-bottom: 0.5rem;
-            margin-bottom: 1.5rem;
             font-size: 1.8rem;
+            border-bottom: 3px solid #6c63ff;
+            display: inline-block;
+            padding-bottom: 0.4rem;
+            margin-bottom: 1.5rem;
         }
 
         .section {
@@ -72,67 +78,103 @@
             margin-left: 1.5rem;
         }
 
+        /* Stylish Badges */
         .skills span, .projects span {
             display: inline-block;
             background: #6c63ff;
             color: #fff;
-            padding: 0.4rem 0.8rem;
-            margin: 0.3rem;
-            border-radius: 5px;
-            font-size: 0.9rem;
-        }
-
-        .projects a {
-            display: inline-block;
-            margin-top: 0.8rem;
-            color: #fff;
-            background-color: #6c63ff;
             padding: 0.5rem 1rem;
-            border-radius: 5px;
+            margin: 0.3rem;
+            border-radius: 50px;
             font-size: 0.9rem;
             font-weight: bold;
             transition: all 0.3s ease;
         }
 
+        .skills span:hover, .projects span:hover {
+            background: #4e4bff;
+            transform: scale(1.1);
+        }
+
+        /* Project Buttons */
+        .projects a {
+            display: inline-block;
+            margin-top: 1rem;
+            color: #fff;
+            background: linear-gradient(135deg, #6c63ff, #4e4bff);
+            padding: 0.6rem 1.2rem;
+            border-radius: 50px;
+            font-size: 0.9rem;
+            font-weight: bold;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+            transition: all 0.3s ease;
+        }
+
         .projects a:hover {
-            background-color: #5a56e0;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+            transform: translateY(-3px);
+            box-shadow: 0 6px 15px rgba(0, 0, 0, 0.2);
         }
 
         footer {
             text-align: center;
-            padding: 1rem;
+            padding: 1.5rem;
             background: #333;
             color: #fff;
             margin-top: 2rem;
             font-size: 0.9rem;
+            border-radius: 15px 15px 0 0;
+        }
+
+        /* Background Animation */
+        body::before {
+            content: "";
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: linear-gradient(135deg, rgba(108, 99, 255, 0.2), rgba(255, 255, 255, 0.8));
+            z-index: -1;
+            animation: gradientMove 10s infinite;
+        }
+
+        @keyframes gradientMove {
+            0% {
+                background-position: 0% 50%;
+            }
+            50% {
+                background-position: 100% 50%;
+            }
+            100% {
+                background-position: 0% 50%;
+            }
         }
 
         /* Responsive Design */
         @media (max-width: 768px) {
             header h1 {
-                font-size: 2rem;
+                font-size: 2.5rem;
             }
             header p {
                 font-size: 1rem;
             }
             .container {
-                padding: 1rem;
+                padding: 1.5rem;
             }
             h2 {
-                font-size: 1.5rem;
+                font-size: 1.6rem;
             }
         }
 
         @media (max-width: 480px) {
             header h1 {
-                font-size: 1.8rem;
+                font-size: 2rem;
             }
             header p {
                 font-size: 0.9rem;
             }
             h2 {
-                font-size: 1.3rem;
+                font-size: 1.4rem;
             }
             .skills span, .projects span {
                 font-size: 0.8rem;
@@ -146,7 +188,7 @@
         <p>Passionate Developer | Full-Stack Java Developer</p>
         <p>
             📧 <a href="mailto:lovelysingh49178@gmail.com">lovelysingh49178@gmail.com</a> |
-            📞 +91 8178787012 |
+            📞 +81 878787012 |
             <a href="https://github.com/Manisha061099">GitHub</a> |
             <a href="https://linkedin.com/in/manisha-singh-babb662a6">LinkedIn</a>
         </p>
